--- a/style/component/button.css
+++ b/style/component/button.css
@@ -9,10 +9,37 @@ header{
     display: inline-flex;
     flex-direction: column;
     text-align: center;
-    gap: 10px;
+    align-items: center;
+    gap: 8px;
     top: 30%;
     right: 1%;
     z-index: 2;
+}
+.font-scale div{
+    height: 50px;
+    width: 50px;
+    background-color: var(--color-white);
+    border-radius: 50%;
+    border: 1px solid var(--color-accent-green-700);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 0px;
+}
+.font-scale div p{
+    margin: 0;
+    line-height: 1;
+    font-size: .75rem;
+}
+.font-scale button{
+    height: 40px;
+    width: 40px;
+    background: none;
+    cursor: pointer;
+    background-color: var(--color-white);
+}
+.font-scale .material-symbols-outlined{
+    color: var(--color-accent-green-700);
 }
 .font-scale .active{
     background-color: var(--color-accent-green-700);
@@ -20,7 +47,6 @@ header{
 }
 .font-scale button:nth-child(n+2){
     border: 1px solid var(--color-neutral-800);
-    /* background-color: var(--color-white); */
     border-radius: 50%;
 }
 .font-scale button:nth-child(n+2):hover{
@@ -41,7 +67,7 @@ header{
     align-items: center;
     cursor: pointer;
     background-color: var(--color-white);
-    margin-top: 30px;
+    /* margin-top: 30px; */
 }
 .page-btn.green{
     display: flex;
@@ -133,32 +159,39 @@ header{
 
 
 /* 小標籤按鈕狀態 */
-.btn-group.green ul li:hover, .btn-group.green ul li.active{
+.btn-group.green ul li:hover, 
+.btn-group.green ul li.active{
     border-bottom: 2px solid var(--color-accent-green-700);
 }
-.btn-group.green ul li button:hover, .btn-group.green ul li.active button{
+.btn-group.green ul li:hover button, 
+.btn-group.green ul li.active button{
     color: var(--color-accent-green-700);
     font-weight: 500;
 }
-
-.btn-group.pink ul li:hover, .btn-group.pink ul li.active{
+.btn-group.pink ul li:hover, 
+.btn-group.pink ul li.active{
     border-bottom: 2px solid var(--color-secondary-pink-700);
 }
-.btn-group.pink ul li button:hover, .btn-group.pink ul li.active button{
+.btn-group.pink ul li:hover button, 
+.btn-group.pink ul li.active button{
     color: var(--color-secondary-pink-700);
     font-weight: 500;
 }
-.btn-group.orange ul li:hover, .btn-group.orange ul li.active{
+.btn-group.orange ul li:hover, 
+.btn-group.orange ul li.active{
     border-bottom: 2px solid var(--color-secondary-orange-700);
 }
-.btn-group.orange ul li button:hover, .btn-group.orange ul li.active button{
+.btn-group.orange ul li:hover button, 
+.btn-group.orange ul li.active button{
     color: var(--color-secondary-orange-700);
     font-weight: 500;
 }
-.btn-group.purple ul li:hover, .btn-group.purple ul li.active{
+.btn-group.purple ul li:hover, 
+.btn-group.purple ul li.active{
     border-bottom: 2px solid var(--color-secondary-purple-700);
 }
-.btn-group.purple ul li button:hover, .btn-group.purple ul li.active button{
+.btn-group.purple ul li:hover button, 
+.btn-group.purple ul li.active button{
     color: var(--color-secondary-purple-700);
     font-weight: 500;
 }
@@ -302,7 +335,11 @@ header{
     color: var(--color-neutral-500);
     cursor: default;
 }
-
+table{
+    width: 100%;
+    border-radius: 20px;
+    border-spacing: 0;
+}
 th{
     background-color: var(--color-neutral-200);
 }
@@ -317,11 +354,7 @@ th, td{
 .course tr:hover td{
     cursor: pointer;
 }
-table{
-    width: 100%;
-    border-radius: 20px;
-    border-spacing: 0;
-}
+
 
 /* select-btn */
 .select-btn-group{
