--- a/style/component/nav-bar.css
+++ b/style/component/nav-bar.css
@@ -24,10 +24,10 @@
 .nav-bar.scrolled img{
     width: 135px;
 }
-.page-btn{
+.nav-btn{
     display: flex;
 }
-.page-btn ul{
+.nav-btn ul{
     display: inline-flex;
     margin-right: 0px;
     height: 40px;
@@ -47,12 +47,48 @@
     font-weight:600;
     border-bottom: 2px solid var(--color-accent-green-700);
 }
-.page-btn li{
+.nav-btn li{
     list-style-type: none;
     margin-right: 12px;
 }
 
-.page-btn .btn-group{
+.nav-btn .btn-group{
     display: flex;
     gap: 10px;
+}
+@media screen and (max-width: 1200px){
+    .nav-btn .btn-group{
+        margin-right: 10px;
+    }
+    .nav-bar .nav-btn .hb{
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        background-color: var(--color-white);
+        border: 1px solid var(--color-accent-green-700);
+        position: relative;
+        z-index: 10;
+    }
+    .nav-bar .nav-btn .hb span{
+        display: block;
+        height: 2px;
+        width: 60%;
+        position: absolute;
+        background-color: var(--color-accent-green-700);
+        margin: auto;
+        left: 0;
+        right: 0;
+    }
+    .nav-bar .nav-btn .hb span:first-child{
+        top: 10px;
+    }
+    .nav-bar .nav-btn .hb span:nth-child(2){
+        top: 18px;
+    }
+    .nav-bar .nav-btn .hb span:nth-child(3){
+        top: 26px;
+    }
+    .nav-bar .nav-btn ul{
+        display: none;
+    }
 }
