--- a/style/page/activity.css
+++ b/style/page/activity.css
@@ -7,3 +7,11 @@
     bottom: -50px;
     z-index: -1;
 }
+.activity.activity-page .col-4:nth-child(-n+3){
+    margin-bottom: 60px;
+}
+@media screen and (max-width: 440px){
+    .activity.activity-page .col-4:nth-child(-n+5){
+        margin-bottom: 60px;
+    }
+}
