--- a/style/page/search.css
+++ b/style/page/search.css
@@ -1,7 +1,7 @@
 .search-title{
     position: relative;
     margin-bottom: 60px;
-    margin: 20px auto;
+    margin:  0 0 20px auto;
     display: flex;
 }
 .search-title h1{
