--- a/style/component/footer.css
+++ b/style/component/footer.css
@@ -38,10 +38,12 @@ footer .source{
     padding-top: 24px;
     border-top: 1px solid var(--color-neutral-700);
     font-family: var(--font-main);
-    font-size: 14px;
 }
 footer .tour-guide-group-w440{
     display: none;
+}
+footer .source p{
+    font-size: .8rem;
 }
 
 /* 導覽按鈕css整理在button.css */
@@ -50,11 +52,16 @@ footer .tour-guide-group-w440{
     footer .info{
         margin-top: 0;
         margin-bottom: 30px;
-        display: flex;
-        gap: 30px;
     }
     footer .tour-guide-group{
         margin-bottom: 30px;
+    }
+}
+@media screen and (max-width: 810px){
+    footer .info{
+        margin-bottom: 24px;
+        margin-right: 20px;
+        flex-wrap: wrap;
     }
 }
 @media screen and (max-width: 440px){
