--- a/style/component/title-area.css
+++ b/style/component/title-area.css
@@ -36,13 +36,9 @@ header .title-area.green  .col-8 > span{
     position: relative;
     overflow: hidden;
 }
-.title-area.about-page{
+.title-area.about-page,
+.title-area.contact-page{
     height: 450px;
-}
-@media screen and (max-width: 440px){
-    .title-area.activity-page .text-overlay{
-        margin-top: 30px;
-    }
 }
 
 .title-area img{
@@ -110,12 +106,19 @@ header .title-area.green  .col-8 > span{
 .bread button.purple:hover{
     color: var(--color-secondary-purple-700);
 }
-
+@media screen and (max-width: 810px){
+    .title-area .col-4 > .text-overlay{
+        margin: 30px 0;
+    }
+}
 @media screen and (max-width: 440px){
     .title-area .col-8 > span{
-        margin-top: 140px;
+        margin-top: 120px;
     }
     .about-indoor .indoor-img{
         display: none;
+    }
+    .title-area.contact-page{
+        height: 380px;
     }
 }
