--- a/style/page/contact.css
+++ b/style/page/contact.css
@@ -1,18 +1,23 @@
+.contact{
+    position: relative;
+    overflow: hidden;
+    height: 208px;
+}
 .contact .card{
     border: 1px solid var(--color-neutral-500);
     border-radius: 20px;
-    padding: 40px;
+    padding: 40px 0;
     text-align: center;
     background-color: var(--color-white);
-    margin-bottom: 120px;
+    margin-bottom: 60px;
 }
 iframe{
-    /* margin: 0 0 140px 0; */
     width: 100%;
-    /* height: 510px; */
 }
 .traffic{
-    padding-bottom: 100px;
+    padding: 30px 0 80px 0;
+    position: relative;
+    overflow: hidden;
 }
 .traffic .title{
     margin-bottom: 50px;
@@ -22,9 +27,48 @@ iframe{
     flex-direction: column;
     justify-content: center;
 }
-.traffic .text h5{
-    margin-bottom: 10px;
+.traffic .text .p1{
+    font-weight: 500;
 }
 .traffic .text div{
     margin-bottom: 30px;
+}
+img.contact-bg{
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+img.contact-bg2{
+    display: none;
+}
+@media screen and (max-width: 1200px){
+    img.contact-bg,
+    .title-area img.contact-bg{
+        left: -360px;
+    }
+}
+@media screen and (max-width: 810px){
+    iframe{
+        height: 300px;
+    }
+    .traffic .text{
+        margin-top: 60px;
+    }
+}
+@media screen and (max-width: 440px){
+    .contact{
+        margin-bottom: 30px;
+        height: fit-content;
+    }
+    .contact-bg{
+        display: none;
+    }
+    .contact-bg2{
+        display: block;
+    }
+    .contact .card{
+        gap: 20px;
+        margin-bottom: 10px;
+    }
 }
