--- a/style/page/newbooks.css
+++ b/style/page/newbooks.css
@@ -1,6 +1,6 @@
 
-.newbooks-list .books-list{
-    margin-top: 100px;
+.books-list{
+    margin-top: 60px;
 }
 .newbooks-bg1{
     position: absolute;
@@ -10,4 +10,20 @@
 .newbooks-list{
     display: flex;
     position: relative;
+}
+@media screen and (max-width: 810px){
+    .newbooks-list .btn-group ul{
+        justify-content: start;
+    }
+    .newbooks-list img{
+        width: 70%;
+    }
+    .newbooks-bg1{
+        width: 60%;
+    }
+}
+@media screen and (max-width: 440px){
+    .newbooks-list img{
+        width: 90%;
+    }
 }
