--- a/style/page/search.css
+++ b/style/page/search.css
@@ -1,8 +1,8 @@
 .search-title{
     position: relative;
-    margin-bottom: 60px;
-    margin:  0 0 20px auto;
+    padding-bottom: 60px;
     display: flex;
+    overflow: hidden;
 }
 .search-title h1{
     text-align: center;
@@ -11,8 +11,7 @@
 .search-title img{
     position: absolute;
     top: 0;
-    left: 0;
-    width: 100%;
+    left: 0px;
     z-index: -1;
 }
 .search-title .hot{
@@ -32,7 +31,7 @@
     padding: 0 10px 10px 10px;
 }
 .search-books .book-list{
-    padding: 50px 0 20px 0;
+    padding: 50px 0;
     border-bottom: 1px solid var(--color-neutral-500);
 }
 .search-books .book-list a{
@@ -42,27 +41,62 @@
     color: var(--color-accent-green-700);
 }
 .book-list .detail{
-    display: flex;
-    gap: 30px;
+    display: flex;    
     margin-bottom: 16px;
+    flex-wrap: wrap;
+}
+.book-list .detail p{
+    margin-right: 20px;
 }
 .book-list .detail .col-10{
     display: flex;
 }
 .book-list .btn-group{
-    margin-top: 70px;
+    margin-top: 30px;
 }
-.book-lis .col-2 img{
-    width: fit-content;
+.book-list .col-2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .book-list:last-child{
-    margin-bottom: 30px;;
+    margin-bottom: 30px;
 }
 .tag{
     display: flex;
     gap: 10px;
+    flex-wrap: wrap;
 }
 .tag span{
     background-color: var(--color-neutral-200);
     padding: 0 16px;
+}
+@media screen and (max-width: 1440px){
+    .search-title img{
+        left: -240px;
+    }
+}
+@media screen and (max-width: 1200px){
+    .search-title img{
+        left: -360px;
+    }
+}
+@media screen and (max-width: 1024px){
+    .search-title img{
+        left: -448px;
+    }
+}
+@media screen and (max-width: 810px){
+    .search-title img{
+        left: -555px;
+    }
+}
+@media screen and (max-width: 440px){
+    .search-books .book-list img,
+    .search-books .book-list h5{
+        margin-bottom: 10px;
+    }
+    .search-title img{
+        left: -740px;
+    }
 }
