--- a/style/style.css
+++ b/style/style.css
@@ -31,9 +31,11 @@
 /* ==== hero swiper ==== */
 .hero .swiper{
     position: relative;
+    height: 100vh;
+    
 }
 .hero .swiper-slide img{
-    width:100%;
+    object-fit: cover;
 }
 .hero .swiper-pagination-bullet{
     background-color: var(--color-neutral-100);
@@ -143,6 +145,14 @@
 
 
 /* ==== 首頁分眾按鈕 ==== */
+.tour-guide img{
+    position: absolute;
+    object-fit: cover;
+    margin: auto;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+}
 .tour-guide{
     display: flex;
     padding: 120px 0;
@@ -157,26 +167,6 @@
     display: flex;
     gap: 20px;
 }
-.tour-guide img{
-    position: absolute;
-    object-fit: cover;
-    margin: auto;
-    bottom: 0;
-    left: 0;
-    z-index: -1;
-}
-.tour-guide .card{
-    text-align: center;
-    border: 1px solid var(--color-neutral-500);
-    background-color: var(--color-white);
-    border-radius: 20px;
-    position: relative;
-    display: flex;
-    align-items: center;
-    transition: all .3s ease-in-out;
-    padding:40px 0;
-    min-height: 330px;
-}
 .tour-guide .card .arrow{
     position: absolute;
     right: 20px;
@@ -189,15 +179,33 @@
     top: 10px;
     transition: .3s;
 }
+.tour-guide .card{
+    text-align: center;
+    border: 1px solid var(--color-neutral-500);
+    background-color: var(--color-white);
+    border-radius: 20px;
+
+    position: relative;
+    display: flex;
+    align-items: center;
+    padding:40px 0;
+    min-height: 330px;
+}
 .tour-guide .card-content{
     display: flex;
     flex-direction: column;
     align-items: center;
+    transition: margin .5s ease;
+}
+.tour-guide .card:hover .card-content{
+    margin-top: -30px;
+    transition: margin .5s ease;
 }
 .tour-guide .card-content .detail{
     display: flex;
     flex-direction: column;
     align-items: center;
+    transition: all .3s ease-in-out;
 }
 .tour-guide .card-content span:nth-child(1){
     font-size: 6rem;
@@ -206,6 +214,7 @@
 .tour-guide .card h4{
     color: var(--color-accent-green-700);
     margin: 8px 0 12px 0;
+    transition: all .3s ease-in-out;
 }
 .tour-guide .card .h3-eg{
     opacity: 0;
@@ -230,7 +239,7 @@
     opacity: 0;
     visibility: hidden;
     height: 0;
-    transition: height .3s ease, opacity .3s ease, visibility .3s ease;
+    transition: height 1s ease, opacity 0s ease, visibility .3s ease;
     margin: 0;
 }
 .tour-guide .title{
@@ -468,7 +477,7 @@
 }
 .hot-activity .card .detail .content a{
     position: absolute;
-    right: 65px;
+    right: 35px;
     top: -80px;
     background-color: var(--color-accent-yellow-500);
     width: 120px;
@@ -500,7 +509,6 @@
 }
 .hot-activity .card .day{
     text-align: center;
-    /* margin-right: 20px; */
     text-shadow: 4px 4px 10px var(--color-neutral-800);
 }
 .hot-activity .card .day .date{
@@ -516,6 +524,9 @@
     border-radius: 20px;
     margin-left: auto;
 }
+.hot-activity .card .day2{
+    display: none;
+}
 .hot-activity .card .activity-name *{
     color: var(--color-white);
     text-shadow: 4px 4px 10px var(--color-neutral-800);
@@ -525,6 +536,7 @@
 }
 .hot-activity .card .sign-up{
     display: flex;
+    flex-wrap: wrap;
     margin-top: 8px;
 }
 .hot-activity .card .sign-up p:first-child{
@@ -644,7 +656,7 @@
 .tour-guide .modal-content{
     width: 1240px;
     height: 650px;
-    padding: 50px 128px;
+    padding: 70px 128px;
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -901,6 +913,8 @@ input:focus{
         flex-direction: column;
         background-color: rgba(255, 255, 255, 0);
         padding: 0px;
+        display: flex;
+        flex-direction: row;
     }
     .hot-activity .card .detail .content{
         margin-left: 0;
@@ -908,17 +922,33 @@ input:focus{
     .hot-activity .card img{
         border-radius: 30px;
     }
-    .hot-activity .card{
-        border-radius: 0px;
+    .hot-activity .card:hover img{
+        scale: 1;
     }
     .hot-activity .card .day{
-        position: absolute;
+        width: 130px;
+        height: 130px;
         border-radius: 30px;
-        top: 260px;
-        left: 16px;
-        background-color: rgba(0, 0, 0, .5);
+        text-shadow: none;
+        border: 1px solid var(--color-accent-green-700);
+        margin: 10px 20px 0 0;
     }
-    
+    .hot-activity .card .day span,
+    .hot-activity .card .day .date{
+        color: var(--color-accent-green-700);
+    }
+    .hot-activity .card .day .week{
+        background-color: var(--color-accent-green-700);
+        color: var(--color-white);
+        border: none;
+    }
+    .hot-activity .card .day .time{
+        margin-top: -10px;
+    }
+    .hot-activity .card .detail .content a{
+        width: 100px;
+        height: 100px;
+    }
     .hot-activity .card .activity-name *{
         text-shadow: none;
         color: var(--color-neutral-800);
@@ -928,6 +958,9 @@ input:focus{
     .hot-activity img.bg,
     .best-moments .bg{
         left: -448px;
+    }
+    .best-moments .bg{
+        display: none;
     }
     .best-moments .main-image img:first-child{
         display: none;
@@ -1006,22 +1039,13 @@ input:focus{
     }
     .hot-activity .card img{
         border-radius: 20px;
-        height: 300px;
+        height: 240px;
         object-fit: cover;
     }
-    .hot-activity .sign-up{
-        flex-direction: column;
-    }
-    .hot-activity .detail .day{
-        width: 120px;
-        height: 120px;
-    }
-    .hot-activity .detail .date{
-        line-height: 1;
-    }
+
     .hot-activity .card .detail .content a{
         right: 20px;
-        top: -88px;
+        top: -150px;
         width: 80px;
         height: 80px;
     }
@@ -1030,9 +1054,34 @@ input:focus{
         transform: translateY(0px);
     }
     .hot-activity .card .day{
-        position: absolute;
-        border-radius: 20px;
-        top: 172px;
-        left: 8px;
+        display: none;
     }
+    .hot-activity .card .detail{
+        flex-direction: column;
+    }
+    .hot-activity .card .day2{
+        display: flex;
+        align-items: center;
+        gap: 6px;
+    }
+    .hot-activity .card .day2 span{
+        color: var(--color-accent-green-700);
+    }
+    .hot-activity .card .week{
+        display: inline-flex;
+        border: 1px solid var(--color-accent-green-700);
+        color: var(--color-white);
+        justify-content: center;
+        align-items: center;
+        font-size: 1rem;
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+    }
+    .hot-activity .card .activity-name{
+        padding-top: 0;
+    }
+    .hot-activity .card .detail .content p{
+    -webkit-line-clamp: 2;
+}
 }
